<resources>
    <string name="app_name">MAIN SCRREN</string>
    <string name="background_activity_name">BACKGROUND</string>
    <string name="title_activity_name">TITLE</string>
    <string name="current">current</string>
    <string name="ManC">ManC</string>
    <string name="Liv">Liv</string>
    <string name="Che">Che</string>
    <string name="ManU">ManU</string>
    <string name="Asr">Asr</string>
    <string name="Tot">Tot</string>
    <string name="default_title">Manchester City</string>
</resources>
