<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:text="@string/background_activity_name"
        tools:context=".BackGroundActivity">

    <ImageView
            android:id="@+id/Btn"
            android:scaleType="fitCenter"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_gravity="right"
            android:background="@null"
            android:text="@string/current"
            android:src="@drawable/a"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <ImageButton
                android:id="@+id/BtnIa"
                android:scaleType="fitCenter"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@null"
                android:text="@string/ManC"
                android:src="@drawable/a"
        />
        <ImageButton
                android:id="@+id/BtnIb"
                android:scaleType="fitCenter"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@null"
                android:text="@string/Liv"
                android:src="@drawable/b"
        />
        <ImageButton
                android:id="@+id/BtnIc"
                android:scaleType="fitCenter"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@null"
                android:text="@string/Che"
                android:src="@drawable/c"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <ImageButton
                android:id="@+id/BtnId"
                android:scaleType="fitCenter"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@null"
                android:text="@string/ManU"
                android:src="@drawable/d"
        />
        <ImageButton
                android:id="@+id/BtnIe"
                android:scaleType="fitCenter"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@null"
                android:text="@string/Asr"
                android:src="@drawable/e"
        />
        <ImageButton
                android:id="@+id/BtnIf"
                android:scaleType="fitCenter"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@null"
                android:text="@string/Tot"
                android:src="@drawable/f"
        />
    </LinearLayout>
    <Button
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:id="@+id/BtnSave"
            android:textColor="#212121"
            android:layout_gravity="center"
            android:background="#E0E0E0"
    />

</LinearLayout>